// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContainerPage.styles Container DEVE ser igual ao snapshot 1`] = `
.c0 {
  background: #EDF2F0;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`ContainerPage.styles Container DEVE ser igual ao snapshot QUANDO for passado uma cor de fundo 1`] = `
.c0 {
  background: #ff0000;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`ContainerPage.styles Content DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: flex;
  flex-direction: column;
  min-height: calc(100cqh - 64px);
}

<div>
  <div
    class="c0"
  />
</div>
`;
